--- a/pet-home-symfony/.env
+++ b/pet-home-symfony/.env
@@ -44,3 +44,10 @@ MAILER_DSN=null://null
 # CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 CORS_ALLOW_ORIGIN=http://localhost:4200
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=PetHome25@
+
+###< lexik/jwt-authentication-bundle ###
