--- a/pet-home-symfony/config/packages/security.yaml
+++ b/pet-home-symfony/config/packages/security.yaml
@@ -20,6 +20,11 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
+        register:
+            pattern: ^/api/register$
+            stateless: true
+            security: false  # Desactivar la seguridad para esta ruta
+
         api:
             pattern: ^/api
             stateless: true
@@ -32,4 +37,4 @@ security:
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
