--- a/pet-home-symfony/.env
+++ b/pet-home-symfony/.env
@@ -16,14 +16,14 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=e8564c2f5504c7b224db2630fe0137f4
+APP_SECRET=4853dfa470fc8d861c9205b52b8f48a7
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/pethome"
@@ -41,13 +41,5 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 ###> nelmio/cors-bundle ###
-# CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-CORS_ALLOW_ORIGIN=http://localhost:4200
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-
-###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=PetHome25@
-
-###< lexik/jwt-authentication-bundle ###
